@@ -1,0 +1,6 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+on_subscribe, zeek/supervisor
+on_subscribe, /my_topic
+on_unsubscribe, /my_topic
+on_unsubscribe, /my_topic
+on_subscribe, /my_topic2
